# poetry-plugin-pypi-proxy

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  default.nix  flake.nix  pyproject.toml
.github/workflows/: compatibility.yaml  main.yaml  publish.yaml
src/poetry_plugin_pypi_proxy/: plugin.py  utils.py
src/poetry_pypi_proxy_plugin/: plugin.py
tests/: test_plugin.py  test_proxy_repository.py  test_utils.py
tests/console/: test_application.py
tests/e2e/: test_e2e.py  test_simple.py
tests/e2e/sample-dependency/: setup.py
tests/e2e/sample-project/: README.md  pyproject.toml
tests/repositories/: test_legacy_proxy_repository.py
